# lamb-skewers-insight

./: pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: providers.py  services.py  tests.py
